@@ -73,7 +73,7 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>string:${object_url}/ComponentTool_viewComponentValueList</string> </value>
+            <value> <string>string:${object_url}/ComponentTool_viewContentList</string> </value>
         </item>
       </dictionary>
     </pickle>
