@@ -2,6 +2,7 @@ base_type_interaction_workflow
 business_template_building_workflow
 business_template_installation_workflow
 distributed_ram_cache_interaction_workflow
+component_interaction_workflow
 dynamic_class_generation_interaction_workflow
 edit_workflow
 memcached_plugin_interaction_workflow
