@@ -1,3 +1,9 @@
+2012-01-18 arnaud.fontaine
+* Complete ComponentTool view.
+* Implement Extension Component.
+* Complete ExtensionComponent view.
+* Add component_interaction_workflow to reset erp5.component when modifying the source code of an Extension Component.
+
 2012-12-20 arnaud.fontaine
 * Add initial ZODB component prototype.
 
